--- a/style.css
+++ b/style.css
@@ -7,16 +7,17 @@ body {
 
 
 /* Dit is allemaal om de titel te laten bewegen.*/
-h1{
+.Title{
     margin-top: 0;
-    position: relative; /*positie van titel moet relatief zijn om te kunnen bewegen*/
-    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc,    /*shaduw effect titel*/
-    0 3px 0 #ccc, 0 4px 0 #ccc,
-    0 5px 0 #ccc, 0 6px 0 #ccc,
-    0 7px 0 #ccc, 0 8px 0 #ccc,
-    0 9px 0 #ccc, 0 10px 0 #ccc,
-    0 11px 0 #ccc, 0 12px 0 #ccc,
-    0 20px 30px rgba(0, 0, 0, 0.5);
+    position: relative; /*relatief zorgt ervoor dat hij uberhaupt kan bewegen*/
+    color: #fff; /* kleur van titel */
+    text-shadow: 
+        0 1px 0 rgba(0, 0, 0, 0.2), 
+        0 2px 0 rgba(0, 0, 0, 0.3), 
+        0 3px 0 rgba(0, 0, 0, 0.4), 
+        0 4px 0 rgba(0, 0, 0, 0.5), 
+        0 5px 0 rgba(0, 0, 0, 0.6), 
+        0 6px 5px rgba(0, 0, 0, 0.7); /* diepte*/
     
     font-size:  60px;
     padding: 0px 0px 50px 0px;
@@ -42,7 +43,7 @@ h1{
 
 
 .diceNumber{
-    display: flex;           /*flex is nodig voor deze manier van centreren*/
+    display: flex;           /*flex centreert het*/
     justify-content: center; /* Centreert de tekst horizontaal */
     align-items: center;     /* Centreert de tekst verticaal */
 
@@ -57,7 +58,7 @@ h1{
 }
 
 .iconLeft {
-    display: flex;              /*flex is nodig voor deze manier van centreren*/
+    display: flex;              /*flex centreert het*/
     align-items: top;
     margin-right: auto;
     font-size: xx-large;
@@ -65,13 +66,13 @@ h1{
     font-family: cursive;
 }
 .iconLeft img {         /*door img achter de class te zetten kan je specifiek dingen voor alleen img aanpassen (hoeft dus niet apart een class aangemaakt worden hiervoor)*/
-    margin-right: 10px; /* Optioneel: wat ruimte tussen de afbeelding en tekst */
-    max-width: 50px; /* Stel een breedte in zodat de afbeelding niet te groot is */
+    margin-right: 10px; /* ruimte tussen de afbeelding en tekst */
+    max-width: 50px; /* breedte*/
     max-height: 50px;
 }
 
 .iconRight {
-    display: flex;   /*flex is nodig voor deze manier van centreren*/
+    display: flex;   /*flex centreert het*/
     align-items: top;
     margin-left: auto;
     font-size: xx-large;
@@ -79,21 +80,21 @@ h1{
     font-family: cursive;
 }
 .iconRight img {        /*door img achter de class te zetten kan je specifiek dingen voor alleen img aanpassen (hoeft dus niet apart een class aangemaakt worden hiervoor)*/
-    margin-right: 10px; /* Optioneel: wat ruimte tussen de afbeelding en tekst */
-    max-width: 50px; /* Stel een breedte in zodat de afbeelding niet te groot is */
+    margin-right: 10px; /* ruimte tussen de afbeelding en tekst */
+    max-width: 50px; /* breedte */
     max-height: 50px;
 }
 
 .mainContainer {
-    display: grid;
-    padding: 50px 50px 0px;
+    display: grid; /*dit is een soort tabel, 3 kolonmen, een voor lives, coins en titel*/
     grid-template-columns: repeat(3, 1fr);  /*maak 3 kolommen met 1 ruimte ertussen ofz*/
-    gap: 50px;
+    padding: 50px 50px 0px;
+    gap: 50px; /*ruimte tussen de kolommen, andere soort padding*/
 }
 
 
 .controlButtons{
-    display: flex;   /*flex is nodig voor deze manier van centreren*/
+    display: flex;   /*flex centreert het*/
     flex-direction: column; /*zet de knoppen onderelkaar*/
 }
 .controlButtons button{
@@ -121,7 +122,7 @@ h1{
 }
 
 .feedbackTekst{
-    display: flex;   /*flex is nodig voor deze manier van centreren*/
+    display: flex;   /*flex centreert het*/
     justify-content: center; /* Centreert de tekst horizontaal */
     font-size: xx-large;
     color: aliceblue;
